--- a/src/pages/Auth/Auth.module.css
+++ b/src/pages/Auth/Auth.module.css
@@ -6,6 +6,13 @@
     @apply flex flex-col gap-2 px-6;
 }
 
+.card__button {
+    @apply w-auto;
+}
+.card_form {
+    @apply flex flex-col items-center;
+}
+
 .title {
     @apply text-3xl mb-7 text-center font-semibold;
 }
