--- a/src/common/layout/Header/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/common/layout/Header/components/BurgerMenu/BurgerMenu.module.css
@@ -1,3 +1,10 @@
+.burger_wrapper {
+    @apply block;
+}
+
+.burger_wrapper {
+    @apply md:hidden;
+}
 .burgerMenu {
     @apply absolute min-h-full min-w-full right-0 overflow-hidden bg-white top-0;
 }
@@ -10,7 +17,10 @@
 }
 
 .burger_lines {
-    @apply absolute right-5 top-5 p-4 space-y-2 bg-gray-600 rounded shadow w-min;
+    @apply md:hidden;
+}
+.burger_lines {
+    @apply absolute md:right-5 top-5 p-4 space-y-2 bg-gray-600 rounded shadow w-min;
 }
 .burger_lines_active {
     @apply absolute right-5 top-5 p-4 space-y-2 rounded shadow w-min bg-sky-400;
@@ -21,4 +31,7 @@
 }
 .burgerMenu_block_nav ul {
     @apply flex flex-col items-start;
+}
+.burgerMenu_block_nav ul li {
+    @apply mb-2;
 }
