--- a/src/pages/SettingsPage/Setting/Setting.module.css
+++ b/src/pages/SettingsPage/Setting/Setting.module.css
@@ -1,3 +1,9 @@
+.setting {
+    @apply flex items-end justify-between;
+}
+.setting svg {
+    @apply cursor-pointer;
+}
 .setting_label {
     @apply text-slate-400;
 }
