--- a/src/common/modal/Modal/Modal.module.css
+++ b/src/common/modal/Modal/Modal.module.css
@@ -1,5 +1,5 @@
 .modal_container {
-    @apply fixed z-30 bg-white p-4  bottom-0 w-full bg-white shadow-blue-500/50 border;
+    @apply fixed z-30 bg-white p-7 bottom-0 w-full bg-white shadow-blue-500/50 border rounded-xl;
 }
 .modal_overlay {
     @apply fixed w-screen h-screen bg-black opacity-30 top-0 z-20 left-0;
