--- a/src/common/layout/Header/Header.module.css
+++ b/src/common/layout/Header/Header.module.css
@@ -1,26 +1,3 @@
 .header_container {
-    @apply w-full px-20 py-[30px] flex items-center justify-between border-b-4;
-}
-
-.header__left {
-    @apply flex items-center;
-}
-
-.header__left img {
-    @apply mr-5;
-}
-
-.header__right_links {
-    @apply hidden;
-}
-.header__right_links {
-    @apply md:flex md:items-center;
-}
-.header__left_logo {
-    @apply relative z-10 text-xl;
-}
-
-
-.header__right_links li {
-    @apply ml-5;
+    @apply sticky w-full px-20 py-[30px] flex items-center justify-between border-b-4 bg-white top-0;
 }
