--- a/src/pages/PokemonsPage/PokemonsPage.module.css
+++ b/src/pages/PokemonsPage/PokemonsPage.module.css
@@ -1,9 +1,29 @@
 .pokemon_infoblock {
-    @apply flex flex-col shadow-md p-5 rounded mr-10 mb-10 w-[240px];
+    @apply flex flex-col shadow-md p-5 rounded mr-2 mb-10 w-[240px];
 }
 .pokemon_infoblock p {
     @apply mr-2 text-slate-400;
 }
 .pokemon_infoblock h2 {
     @apply font-bold text-2xl;
+}
+.pokemons_wrapper {
+    @apply pt-10;
+}
+.pokemons {
+    @apply flex justify-center flex-wrap;
+}
+:global(.dark) .pokemons_wrapper {
+    @apply bg-slate-800;
+    @apply text-slate-300;
+}
+@screen md {
+    .pokemons {
+        @apply justify-between;
+    }
+}
+@screen sm {
+    .pokemon_infoblock {
+        @apply mr-5;
+    }
 }
