--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,12 +1,35 @@
 .profile {
-    @apply flex flex-col items-center p-4;
+    @apply flex flex-col items-center pt-20 h-full;
 }
 .profile__header {
-    @apply flex flex-col  p-4 shadow-2xl rounded-lg border-2  w-full ;
+    @apply flex flex-col  p-4 shadow-2xl rounded-lg border-2  w-full;
 }
 .profile__content_items {
-    @apply flex flex-wrap;
+    @apply flex flex-wrap gap-7;
 }
 .profile__content_items_item {
     @apply w-full;
+}
+.profile__content h2 {
+    @apply my-7;
+}
+
+:global(.dark) .profile {
+    @apply bg-slate-800;
+    @apply text-slate-300;
+}
+:global(.dark) .profile__header {
+    @apply border-slate-300;
+}
+@screen 2xl {
+    .profile {
+        @apply h-screen;
+    }
+    .profile__header {
+        margin: 0 auto;
+        @apply w-fit;
+    }
+    .profile__content_items_item {
+        @apply w-[265px];
+    }
 }
