--- a/src/common/pokemon/PokemonShortCard/PokemonShortCard.module.css
+++ b/src/common/pokemon/PokemonShortCard/PokemonShortCard.module.css
@@ -1,10 +1,11 @@
 .shortCard {
-    @apply flex items-center shadow-2xl rounded-lg p-1 bg-white ml-2 mb-2 w-full border-2;
+    @apply flex items-center shadow-2xl rounded-lg p-1 bg-white  w-full border-2;
 }
 
 .shortCard_active {
     @apply border-orange-300;
 }
+
 :global(.dark) .shortCard {
     @apply bg-slate-800;
     @apply text-slate-300;
